<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VXG Cloud Client</string>
    <string name="app_short_name">VXG Cloud Client</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_load_config">Load config</string>
    <string name="action_reset_config">Reset config</string>
    <string name="action_about">About</string>

    <string name="gcm_send_message">OK</string>
    <string name="token_error_message">token error message</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="caption_sign_in">Sign In</string>
    <string name="caption_back_sign_up">&#60; Sign Up</string>
    <string name="caption_sign_up">Sign Up</string>
    <string name="caption_see_demo">See Demo</string>
    <string name="caption_login_processing">Login...</string>
    <string name="caption_registration_processing">Registering…</string>
    <string name="caption_powered_by">--- Powered by VXG Cloud Platform ---</string>
    <string name="caption_company">Video Experts Group</string>
    <string name="caption_registration">Registration</string>
    <string name="minimal_latency">Minimal Latency</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">User name</string>

</resources>