<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vxg.cnvrclient2.activities.RegistrationActivity"
    android:background="@drawable/bg_cnvrclient2"
    android:gravity="center_vertical"
    android:id="@+id/registrationActivityRoot">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundRegistry"
        android:layout_alignParentStart="true"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:foregroundGravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/registrationForm">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/caption_registration"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:textColor="#fff"
                android:gravity="center"
                android:maxLines="1" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:id="@+id/edt_registration_username"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_username"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edt_cnvrclient2"
                android:gravity="center|center_horizontal" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:id="@+id/edt_registration_email"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_email"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edt_cnvrclient2"
                android:gravity="center|center_horizontal" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:id="@+id/edt_registration_password"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_password"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edt_cnvrclient2"
                android:textAlignment="center"
                android:gravity="center|center_horizontal"
                android:inputType="textPassword" />

            <Button
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:text="@string/caption_sign_up"
                android:id="@+id/btn_registration_signup"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_submit_cnvrclient2"
                android:layout_marginBottom="10dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center|center_horizontal" />

            <Button
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:text="@string/caption_sign_in"
                android:id="@+id/btn_registration_signin"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_cnvrclient2"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center|center_horizontal" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundRegistry_progress"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/progressBar_registration" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/caption_registration_processing"
                android:id="@+id/registration_processing"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

    <!-- TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/caption_powered_by"
        android:id="@+id/textView_Registry_powered_by"
        android:textColor="#ffffff"
        android:layout_gravity="bottom"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" / -->
</RelativeLayout>
